<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity"
    android:background="@color/fondo"    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/azul_head"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingBottom="32dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/nombreApp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_below="@+id/header">


        <RelativeLayout
            android:id="@+id/progeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="20dp"
            android:layout_marginBottom="24dp"
            android:elevation="2dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toStartOf="@id/targetIcon"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_meta"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/lblDistanciaMeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:id="@+id/txtProgreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_progreso"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:progressDrawable="@drawable/progressbar"
                    android:max="100"
                    android:progress="0"/>

                <TextView
                    android:id="@+id/tvRemaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvProgressPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/targetIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/objetivo"
                android:background="@color/white"
                android:padding="8dp"
                android:contentDescription="@string/icon_meta"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btnRegistrarEntrenamiento"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/progeso"
            android:background="@color/azul_head"
            android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/iconAdd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/registrar"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/lbl_registar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconAdd"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="@string/lbl_registar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btnFrases"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/btnRegistrarEntrenamiento"
            android:background="@color/orange_boton"
            android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/iconLightbulb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/comentario"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/lbl_frases"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconLightbulb"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="@string/lbl_frases"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnHistorial"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/btnFrases"
            android:background="@color/verde_boton"
            android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/iconHistory"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/historial"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/lbl_historal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconHistory"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="@string/lbl_historal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnMetas"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/btnHistorial"
            android:background="@color/purpura"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/iconFlag"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/objetivo"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/lbl_metas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconFlag"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="@string/lbl_metas"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>